hphp/hack/test/typecheck/array/disallow_two_type_parameters_for_varray.php.exp
File "disallow_two_type_parameters_for_varray.php", line 3, characters 30-32:
Encountered unexpected token 'int'. (Parsing[1002])
